--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             width: 22%;
             float: left;
         }
-        h2{
-            border: solid 2px black;
+        h1{
+            border-bottom: solid 2px black;
         }
         .image1{
             background-image: url(images.jpeg);
@@ -56,16 +56,14 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
-        h4{
-            float: left;
-            height: 50px;
-            border-left: solid 2px blue;
+        .ayaz{
+            border-left: 5px solid blue;
+            padding-left: 10px;
         }
     </style>
 </head>
 <body>
     <h1>IMAGE / WEB</h1>
-    <h2></h2>
     <div class="image image1"></div>
     <div class="image image2"></div>
     <div class="image image3"></div>
@@ -75,9 +73,8 @@
     <div class="image image7"></div>
     <div class="image image8"></div><br>
     <h3>MARCH 03 2022</h3>
-    <h1>About Web</h1>
-    <h4></h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore laborum ab iusto expedita, modi reiciendis autem, earum explicabo corrupti consequuntur perspiciatis hic perferendis eaque eum doloribus tempora quibusdam, illo laboriosam.</p>
+    <h2>About Web</h2>
+    <p class="ayaz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore laborum ab iusto expedita, modi reiciendis autem, earum explicabo corrupti consequuntur perspiciatis hic perferendis eaque eum doloribus tempora quibusdam, illo laboriosam.</p>
     <div class="murad"></div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores officia quia consequatur magni recusandae blanditiis necessitatibus omnis incidunt ab tempora assumenda quaerat obcaecati eveniet autem ducimus fugit eligendi, sapiente voluptatem?</p>
     <div class="mUrad"></div>
